force-app/main/default/objects/Reference_GL__c/Reference_GL__c.object-meta.xml
<CustomObject>
    <description>Object used to store additional information for on-boarding GL.</description>
    <label>Reference GL</label>
    <nameField>
        <displayFormat>GL-{000000}</displayFormat>
        <label>Reference GL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference GLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>