force-app/main/default/objects/Reference_GL__c/fields/Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To connect GL onboarding case to Reference TAA</description>
    <label>Case Lookup</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference GLs</relationshipLabel>
    <relationshipName>Reference_GLs</relationshipName>
    <type>Lookup</type>
</CustomField>