force-app/main/default/objects/Reference_GL__c/fields/Client_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_User_ID__c</fullName>
    <description>Track the User Name of the client</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Track the User Name of the client</inlineHelpText>
    <label>Client User Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>