force-app/main/default/objects/Reference_GL__c/fields/Communication_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>Communication_Coordinator_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Coordinator Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>