force-app/main/default/objects/Reference_GL__c/fields/EFT_Split__c.field-meta.xml
<CustomField>
    <fullName>EFT_Split__c</fullName>
    <label>EFT Split?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>