force-app/main/default/objects/Reference_GL__c/fields/Onboarding_Age__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Age__c</fullName>
    <formula>Case_Lookup__r.Case_Outstanding_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>