force-app/main/default/objects/Reference_GL__c/fields/Re_Mapping_Needed__c.field-meta.xml
<CustomField>
    <fullName>Re_Mapping_Needed__c</fullName>
    <label>Re-Mapping Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>