force-app/main/default/objects/Reference_GL__c/fields/Set_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Status__c</fullName>
    <description>Used to track Onboarding Set Up Status</description>
    <inlineHelpText>Please choose the appropriate status for tracking the onboarding set up status</inlineHelpText>
    <label>Set Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client did not want service</fullName>
            </value>
            <value>
                <fullName>Client will call back</fullName>
            </value>
            <value>
                <fullName>Initial Mapping</fullName>
            </value>
            <value>
                <fullName>Invalid phone number</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Made Appointment</fullName>
            </value>
            <value>
                <fullName>Mapping Complete</fullName>
            </value>
            <value>
                <fullName>Missed Appointment</fullName>
            </value>
            <value>
                <fullName>Need to Reschedule Appointment</fullName>
            </value>
            <value>
                <fullName>No Contact from Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Re-Mapping</fullName>
            </value>
            <value>
                <fullName>Requested call back</fullName>
            </value>
            <value>
                <fullName>Rescheduled Appointment</fullName>
            </value>
            <value>
                <fullName>Workbook Upload Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>