force-app/main/default/objects/Reference_GL__c/fields/Start_Date_of_On_Hold_Future_PR_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_On_Hold_Future_PR_Run_Date__c</fullName>
    <description>Date that you are putting a case on hold due to a future payroll run date. This should coincide with the date you are updating the status to “On Hold – Future Payroll Run Date”</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that you are putting a case on hold due to a future payroll run date. This should coincide with the date you are updating the status to “On Hold – Future Payroll Run Date”</inlineHelpText>
    <label>Start Date of On Hold-Future PR Run Date</label>
    <type>Date</type>
</CustomField>