force-app/main/default/objects/Reference_GL__c/recordTypes/GL_Onboarding_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>GL_Onboarding_Record_Type</fullName>
    <active>true</active>
    <label>GL Onboarding Record Type</label>
</RecordType>