force-app/main/default/objects/Reference_GL__c/validationRules/Account_Software_is_Other_Update_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Software_is_Other_Update_Notes</fullName>
    <active>true</active>
    <description>If the Accounting Software is Other, you must update the notes section</description>
    <errorConditionFormula>ISPICKVAL( Accounting_Software__c , &quot;Other&quot;)&amp;&amp; ISBLANK( Notes__c )</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>If the Accounting Software is Other, you must update the notes section</errorMessage>
</ValidationRule>