force-app/main/default/objects/Reference_GL__c/validationRules/Exporting_Reporting_field_must_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Exporting_Reporting_field_must_be_filled</fullName>
    <active>true</active>
    <description>Exporting Reporting field must be filled in when the GL Onboarding Complete field is filled in</description>
    <errorConditionFormula>NOT(ISNULL(Date_Appt_Set_Up__c)) &amp;&amp; ISPICKVAL(Exporting_Reporting_Utilized__c,&quot;&quot;)
&amp;&amp; NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>Exporting_Reporting_Utilized__c</errorDisplayField>
    <errorMessage>Exporting Reporting field must be filled in when the Date Mapping Complete field is filled in</errorMessage>
</ValidationRule>