force-app/main/default/objects/Reference_GL__c/validationRules/GL_Acct_Soft_Req_when_Appt_Scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>GL_Acct_Soft_Req_when_Appt_Scheduled</fullName>
    <active>true</active>
    <description>Accounting Software field is required when Date of Scheduled Appointment is filled in and Onboarding Status is set to Appointment Scheduled.</description>
    <errorConditionFormula>AND( NOT(ISNULL(Date_of_Scheduled_Appointment__c)), ISPICKVAL( Accounting_Software__c , &quot;&quot;))</errorConditionFormula>
    <errorMessage>Accounting Software field is required when Date of Scheduled Appointment is filled in and Onboarding Status is &quot;Appointment Scheduled&quot;.</errorMessage>
</ValidationRule>