force-app/main/default/objects/Reference_GL__c/validationRules/GL_Branch_length_three.validationRule-meta.xml
<ValidationRule>
    <fullName>GL_Branch_length_three</fullName>
    <active>true</active>
    <description>Requires Branch length to be 3</description>
    <errorConditionFormula>NOT(
 OR(
  LEN ( Branch__c ) = 0,
  REGEX( Branch__c , &quot;[0-9]{3}&quot;)
 )
)</errorConditionFormula>
    <errorDisplayField>Branch__c</errorDisplayField>
    <errorMessage>The branch number must be 3 characters...</errorMessage>
</ValidationRule>