force-app/main/default/objects/Reference_GL__c/validationRules/GL_OnboardStatus_ApptSched_DateApptSched.validationRule-meta.xml
<ValidationRule>
    <fullName>GL_OnboardStatus_ApptSched_DateApptSched</fullName>
    <active>true</active>
    <description>When On Boarding Status = Appointment Scheduled, make Date of Scheduled Appointment required.</description>
    <errorConditionFormula>ISPICKVAL( Appt_Set_Status__c   , &quot;Appointment Scheduled&quot;) &amp;&amp; ISBLANK(  Date_of_Scheduled_Appointment__c  )</errorConditionFormula>
    <errorDisplayField>Date_of_Scheduled_Appointment__c</errorDisplayField>
    <errorMessage>You must enter a date in the Date of Scheduled Appointment field if you choose the value of Appointment Scheduled in the On Boarding Status field.</errorMessage>
</ValidationRule>