force-app/main/default/objects/Reference_GL__c/validationRules/HTML5_Knockout_Factors_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>HTML5_Knockout_Factors_Required</fullName>
    <active>true</active>
    <description>When Client Type = Core-Legacy, please make the &quot;HTML5 Knockout Factors&quot; drop down a required field.</description>
    <errorConditionFormula>ISPICKVAL( Client_Type__c , &quot;Core-Legacy&quot;)&amp;&amp;
ISPICKVAL( HTML5_Knockout_Factors__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>HTML5_Knockout_Factors__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>