force-app/main/default/objects/Reference_GL__c/validationRules/Import_wasnt_use_as_important_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Import_wasnt_use_as_important_field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Import_Used__c,&quot;No&quot;),
ISBLANK(If_import_wasn_t_used_why__c))</errorConditionFormula>
    <errorDisplayField>If_import_wasn_t_used_why__c</errorDisplayField>
    <errorMessage>Please enter reason for why import wasn&apos;t used.</errorMessage>
</ValidationRule>