force-app/main/default/objects/Reference_GL__c/validationRules/Set_Status_is_clt_didnt_wnt_Upd_Notes2.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_Status_is_clt_didnt_wnt_Upd_Notes2</fullName>
    <active>true</active>
    <description>When set up status is client does not want service, you must update the notes section</description>
    <errorConditionFormula>ISPICKVAL(   Set_Up_Status__c  , &quot;Client did not want service&quot;)&amp;&amp; ISBLANK(  Setup_Status_Notes__c  )</errorConditionFormula>
    <errorDisplayField>Setup_Status_Notes__c</errorDisplayField>
    <errorMessage>If the Set Up Status is &quot;client does not want service&quot;, you must update the Set up status notes with the reason.</errorMessage>
</ValidationRule>