force-app/main/default/objects/Reference_GL__c/validationRules/Set_Up_Status_equals_Mapping_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_Up_Status_equals_Mapping_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
( ISPICKVAL(Set_Up_Status__c,&quot;Mapping Complete&quot;) , 
OR(ISPICKVAL( Preferences__c ,&quot;&quot;), 
ISPICKVAL( EFT_Split__c ,&quot;&quot;), 
ISPICKVAL( Exporting_Reporting_Utilized__c ,&quot;&quot;)) 
)</errorConditionFormula>
    <errorMessage>Preferences , ETF Split ? and Exporting Reporting Utilized needs to be populated.</errorMessage>
</ValidationRule>