force-app/main/default/objects/Reference_GL__c/validationRules/Set_Up_Status_is_Other_Update_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_Up_Status_is_Other_Update_Notes</fullName>
    <active>true</active>
    <description>When set up status is other, you must update the notes section</description>
    <errorConditionFormula>ISPICKVAL(  Appt_Set_Status__c  , &quot;Other&quot;)&amp;&amp; ISBLANK( Notes__c )</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>If the Onboarding Status is Other, you must update the notes section</errorMessage>
</ValidationRule>