force-app/main/default/objects/Reference_GL__c/listViews/All_Open_GL_Onboarding.listView-meta.xml
<ListView>
    <fullName>All_Open_GL_Onboarding</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_ID__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>GL_User_Name__c</columns>
    <columns>Current_Step__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Notes__c</columns>
    <columns>Onboarding_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GL_Status__c</field>
        <operation>equals</operation>
        <value>Order Denied</value>
    </filters>
    <label>All Open GL Onboarding</label>
    <sharedTo>
        <role>OnlineServicesTrainer</role>
        <role>POLGLInternalSupport</role>
        <role>POLGLOnboardingSpecialist</role>
        <role>POLGLOngoingSupport</role>
        <role>POLGLSetUpSpecialist</role>
        <role>POLManager</role>
        <role>POLSupervisorGL</role>
        <role>POLSupervisorTSSTSR</role>
        <role>POLTSR</role>
        <role>POLTSS</role>
        <role>TimeAttendanceManager</role>
    </sharedTo>
</ListView>