force-app/main/default/objects/Reference_GL__c/listViews/AllAll.listView-meta.xml
<ListView>
    <fullName>AllAll</fullName>
    <columns>NAME</columns>
    <columns>Message_Attempts__c</columns>
    <columns>Appt_Set_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CPA_Full_Name_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>