force-app/main/default/objects/Reference_GL__c/listViews/GL_Cancelled.listView-meta.xml
<ListView>
    <fullName>GL_Cancelled</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_ID__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>GL_Status__c</columns>
    <columns>Reasons_Client_Does_Not_Want_Service__c</columns>
    <columns>Communication_Coordinator__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appt_Set_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_GL__c.GL_Onboarding_Record_Type</value>
    </filters>
    <filters>
        <field>Date_Mapping_Complete__c</field>
        <operation>equals</operation>
    </filters>
    <label>GL Cancelled</label>
</ListView>