force-app/main/default/objects/Reference_GL__c/listViews/GL_Client_does_not_want_Service.listView-meta.xml
<ListView>
    <fullName>GL_Client_does_not_want_Service</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_ID__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Reasons_Client_Does_Not_Want_Service__c</columns>
    <columns>Setup_Status_Notes__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Set_Up_Status__c</field>
        <operation>equals</operation>
        <value>Client did not want service</value>
    </filters>
    <filters>
        <field>Date_Mapping_Complete__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_GL__c.GL_Onboarding_Record_Type</value>
    </filters>
    <label>GL Client does not want Service</label>
</ListView>