force-app/main/default/objects/Reference_GL__c/listViews/GL_Enterprise_Onboarding_Reference_GL.listView-meta.xml
<ListView>
    <fullName>GL_Enterprise_Onboarding_Reference_GL</fullName>
    <filterScope>Queue</filterScope>
    <label>GL Enterprise Onboarding</label>
    <queue>GL_Enterprise_Onboarding</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>