force-app/main/default/objects/Reference_GL__c/listViews/GL_Missing_User_Name1.listView-meta.xml
<ListView>
    <fullName>GL_Missing_User_Name1</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Branch_Client_ID__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>NCS_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Missing_User_Name__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>NCS_Email__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>GL_Status__c</field>
        <operation>notEqual</operation>
        <value>Solved,Cancelled,Client Unresponsive</value>
    </filters>
    <label>GL: Missing User Name w/out ncs email</label>
    <sharedTo>
        <role>POLManager</role>
        <role>POLSupervisorGL</role>
        <role>POLSupervisorTSSTSR</role>
        <role>POLTSS</role>
    </sharedTo>
</ListView>