force-app/main/default/objects/Reference_GL__c/listViews/GL_Missing_User_Name_Needs_3rd_Contact.listView-meta.xml
<ListView>
    <fullName>GL_Missing_User_Name_Needs_3rd_Contact</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Branch_Client_ID__c</columns>
    <columns>Date_Opened__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>GL Waiting on User Name</value>
    </filters>
    <filters>
        <field>Appt_Set_Status__c</field>
        <operation>notEqual</operation>
        <value>No Response from Branch</value>
    </filters>
    <filters>
        <field>GL_Status__c</field>
        <operation>notEqual</operation>
        <value>Solved,Cancelled,Client Unresponsive</value>
    </filters>
    <filters>
        <field>Message_Attempts__c</field>
        <operation>equals</operation>
        <value>Attempt 2</value>
    </filters>
    <label>GL:  Missing Username Needs 3rd Contact</label>
    <sharedTo>
        <group>POLGLSpecialist</group>
    </sharedTo>
</ListView>