force-app/main/default/objects/Reference_GL__c/listViews/GL_Setup_A_Reference_GL.listView-meta.xml
<ListView>
    <fullName>GL_Setup_A_Reference_GL</fullName>
    <columns>Communication_Coordinator__c</columns>
    <columns>Branch_Client_ID__c</columns>
    <columns>Date_Mapping_Complete__c</columns>
    <columns>NAME</columns>
    <columns>Follow_Up_Date__c</columns>
    <filterScope>Queue</filterScope>
    <label>GL Setup A</label>
    <queue>GL_Setup_A</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>