force-app/main/default/objects/Reference_GL__c/listViews/GL_Setup_B_Reference_GL.listView-meta.xml
<ListView>
    <fullName>GL_Setup_B_Reference_GL</fullName>
    <columns>Communication_Coordinator__c</columns>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>GL Setup B</label>
    <queue>GL_Setup_B</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>