force-app/main/default/objects/Reference_GL__c/listViews/GL_Setup_C_Reference_GL.listView-meta.xml
<ListView>
    <fullName>GL_Setup_C_Reference_GL</fullName>
    <filterScope>Queue</filterScope>
    <label>GL Setup C</label>
    <queue>GL_Setup_C</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>